[project]
name = "test-sast-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
select = ["ALL"]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pyrefly>=0.53.0",
    "pyright>=1.1.408",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
