[project]
name = "test-sast-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
select = ["ALL"]

[tool.pyright]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "pyrefly>=0.53.0",
    "pyright>=1.1.408",
    "ruff>=0.15.2",
    "semgrep>=1.152.0",
    "ty>=0.0.18",
]
